--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "preview": "npm run pages:build && wrangler pages dev",
     "deploy": "gh-pages -d out",
     "start": "next start",
     "lint": "next lint",
@@ -31,16 +33,17 @@
     "dotenv": "^16.4.5",
     "fuse.js": "^6.6.2",
     "lucide-react": "^0.453.0",
-    "next": "14.2.10",
+    "next": "^15.0.3",
     "next-themes": "^0.3.0",
     "pinyin-pro": "^3.22.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@types/node": "20.14.11",
     "@types/react": "18.3.4",
     "@types/react-dom": "18.3.2",
@@ -53,6 +56,7 @@
     "tailwindcss": "3.4.10",
     "tsx": "4.15.7",
     "typescript": "5.5.4",
-    "vitest": "1.6.0"
+    "vitest": "1.6.0",
+    "wrangler": "^4.45.4"
   }
 }
