feat: add edge runtime support and use GitHub variables for version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Build static site
         env:
           NEXT_TELEMETRY_DISABLED: 1
+          NEXT_PUBLIC_GAME_VERSION: ${{ vars.NEXT_PUBLIC_GAME_VERSION }}
         run: npm run build
 
       - name: Upload Pages artifact
